<resources>
    <string name="app_name">Azwar Movies</string>
    <string name="movie">Movie</string>
    <string name="tv">TV Show</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming_movies">Up Coming Movies</string>
    <string name="achmad_azwar_misbah">Achmad Azwar Misbah</string>
    <string name="powered_by">Powered By:</string>
</resources>